--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,14 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+button {
+  cursor: pointer;
+}
 * {
   box-sizing: border-box;
 }
